--- a/app/views/goldberg/content_pages/_form.rhtml
+++ b/app/views/goldberg/content_pages/_form.rhtml
@@ -18,6 +18,11 @@ Required</label><br/>
 <p>Markup Style<br/>
 <%= form.select :markup_style, @markup_styles %> </p>
 
+<p>Enable Comments ?
+<%= check_box :content_page, :arecomments %></p>
+<div id='content_editor'>
+<p>
+
 <div id='content_editor'>
 <p>
 <% if @content_page.markup_style == 'FCKeditor' -%>
