--- a/app/views/goldberg/auth/_login.rhtml
+++ b/app/views/goldberg/auth/_login.rhtml
@@ -5,8 +5,8 @@
 <% end -%>
 
 <% else -%>
-<p> <%= link_to "Login", :controller => 'goldberg/auth', 
-          :action => 'login' %>
+  <p> <%= link_to "Login", {:controller => 'goldberg/auth', 
+    :action => 'login'}, :class => 'login_link'  %>
 <% if Goldberg.settings.self_reg_enabled -%>
 | <%= link_to "Register", :controller => 'goldberg/users', 
         :action => 'self_register' %>
