--- a/app/views/goldberg/roles_permissions/_form.rhtml
+++ b/app/views/goldberg/roles_permissions/_form.rhtml
@@ -2,10 +2,10 @@
 
 <!--[form:roles_permission]-->
 
-<p><label for="role_id">Role:</label> (<%= @role.name %>)<br/>
+<p><label for="role_id">Role:</label> (<%= @role.name %>)
 <%= hidden_field 'roles_permission', 'role_id'  %></p>
 
-<p><label for="role_id">Permission</label><br/>
+<p><label for="role_id">Permission</label>
 <%= collection_select 'roles_permission', 'permission_id',
       @permissions, :id, :name  %></p>
 
