--- a/themes/blue_snooker/app/views/layouts/application.html.erb
+++ b/themes/blue_snooker/app/views/layouts/application.html.erb
@@ -15,7 +15,12 @@
   <link rel="stylesheet" href="/goldberg/stylesheets/print.css"
         type="text/css" media="print"/>
   <link rel="stylesheet" href="/goldberg/stylesheets/reset.css"
-  <script type="text/javascript" src="/goldberg/javascripts/suckerfish.js"></script>
+  <% if $mega_menu %>
+      <link rel="stylesheet" type="text/css" href="/goldberg/stylesheets/jkmegamenu.css"/>
+      <script type="text/javascript" src="/goldberg/javascripts/jkmegamenu.js"></script>
+  <% else %>
+      <script type="text/javascript" src="/goldberg/javascripts/suckerfish.js"></script>
+  <% end %>
   <% if own_css_exist? -%>
       <link rel="stylesheet" href="/stylesheets/<%= main_Menu_Name %>/all.css" type="text/css" media="screen"/>
   <% else %>
@@ -34,20 +39,22 @@
 </head>
 <body>
 <div class="clear">&nbsp;</div>
-<div class="wrapper container showgri">
-  <div class="header">
-    <div class="span-24 last">
-      <h1><%= main_Menu_Name %></h1>
+<div class="wrapper container">
+  <div class="header span-24 last">
+    <h1><%= main_Menu_Name %></h1>
 
-      <h2><%= Goldberg.settings.site_name %></h2>
-    </div>
+    <h2><%= Goldberg.settings.site_name %></h2>
   </div>
   <div class="span-16 navbar">
-    <div class="topmenu ">
-      <ul id="suckerfish">
-        <%= goldberg_suckerfish_menu %>
-      </ul>
-    </div>
+    <% if $mega_menu %>
+        <ul id="mega_menu_id">
+          <%= mega_menu %>
+        </ul>
+    <% else %>
+        <ul id="suckerfish">
+          <%= goldberg_suckerfish_menu %>
+        </ul>
+    <% end %>
   </div>
   <div class="breadcrumbs span-16">
     <%= goldberg_breadcrumbs %>
@@ -62,14 +69,22 @@
   </div>
   <!-- class="content" -->
   <div class="sidebar span-8 last">
-    <div class="sidecontent span-8">
+    <div class="sidecontent span-8 last">
       <%= goldberg_login %>
     </div>
     <div id="common_message">
+
+
+      <%filename = side_bar_file%>
+      <% if filename %>
+          <% lines=IO.readlines(filename) %>
+          <%= render :text => lines %>
+      <% end %>
     </div>
   </div>
-  <!-- class="sidebar" -->
 
+
+  <!-- class="sidebar" -->
   <div class="footer span-24 last">
     <p style="text-align:center"><%= Goldberg.settings.footer_message %></p>
   </div>
@@ -90,4 +105,4 @@
 <% end %>
 </body>
 </html>
-</html>
+
