Separated the ability to reset the users password from the requirement for users to self confirm.  Now, users can have the ability to reset their passwords when the admin confirms them.

--- a/app/views/goldberg/system_settings/_form.rhtml
+++ b/app/views/goldberg/system_settings/_form.rhtml
@@ -67,5 +67,8 @@ confirmation error page</label><br/>
 Send Confirmation Email</label><br/>
 <%= check_box 'system_settings', 'self_reg_send_confirmation_email' %></p>
 
+<p><label for="allow_password_retrieval"> Allow Users to Retrieve Passwords </label><br/>
+<%= check_box 'system_settings', 'allow_password_retrieval'  %></p>
+
 <!--[eoform:system_settings]-->
 
