--- a/app/views/goldberg/system_settings/show.rhtml
+++ b/app/views/goldberg/system_settings/show.rhtml
@@ -183,6 +183,16 @@ confirm their registration. </p>
 </div>
 </td></tr>
 
+
+<tr class="settings_row">
+<th> Allow password retrieval</th>
+<td><%=h @system_settings.allow_password_retrieval %></td>
+<tr><td colspan=2>
+<div class="guidance_text">
+<p> Allow a confirmed and registered user to request their password via email. </p>
+</div>
+</td></tr>
+
 </table>
 
 <hr/>
