--- a/app/views/goldberg/users/forgot_password.rhtml
+++ b/app/views/goldberg/users/forgot_password.rhtml
@@ -1,6 +1,6 @@
 <h1> Forgot Password </h1>
 
-<% if Goldberg.settings.self_reg_send_confirmation_email -%>
+<% if Goldberg.settings.allow_password_retrieval-%>
 <p> If you've forgot your password, please fill in your userid and
 email address below and we'll send you an email with further
 instructions.</p>
